# TCER

./: .gitignore  AI编码 Token-to-Code 科学计量研究报告.docx  CLAUDE.md  ITERATION-LOG.md  README.md  calibrate_loc.py  conftest.py  launch.bat  launch.command  package-lock.json
doc/: architecture.md  data-format.md  metrics.md
tcer/: README.md  __init__.py  __main__.py  calibrate.py  conftest.py  export.py  loc.py  metrics.py  paths.py  pricing.py  pyproject.toml
tcer/audit/: __init__.py  __main__.py
tcer/config/: composite_baselines.json  model_pricing.json
tcer/core/: __init__.py  analyze.py  audit.py  calibrate.py  codex_reader.py  export.py  file_cache.py  format.py  grok_reader.py  loc.py  metrics.py  models.py  opencode_reader.py  paths.py  pricing.py  reader.py  upload_client.py  upload_prefs.py
tcer/gui/: __main__.py  app.py  metric_defs.py  platform.py  popups.py  theme.py  views.py  widgets.py
tcer/src/tcer/: __init__.py  analyze.py  cli.py  format.py  gui.py  loc.py  metrics.py  models.py  reader.py  report.py
tcer/src/tcer/data/: composite_baselines.json
tcer/src/tcer/gui/: __init__.py  app.py  views.py  widgets.py
tcer/tests/: test_baselines.py  test_metrics.py  test_reader.py  test_report.py
tcer/tests/fixtures/: sample.jsonl
tests/: conftest.py  test_analyze.py  test_audit.py  test_baselines.py  test_calibrate.py  test_codex_reader.py  test_export.py  test_grok_reader.py  test_loc.py  test_metric_defs.py  test_metrics.py  test_opencode_reader.py  test_paths.py  test_pricing.py  test_reader.py
web/: .gitignore  PLAN-client-upload.md  README.md
(+9 files in other folders)
