[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tcer"
version = "0.2.0"
description = "Token-to-Code Efficiency Ratio — offline Claude Code session metrics"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "TCER" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
tcer = "tcer.cli:main"
tcer-gui = "tcer.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tcer = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
